[package]
name = "cfgparser"
version = "0.1.0"
authors = ["jlgerber <jlgerber@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ordered = ["indexmap"]

[dependencies]
nom="5"
indexmap = {version = "1.5", optional = true}